tests/neg/syntax_missing_dot.baa
// EXPECT: [Error]
صحيح الرئيسية() {
    صحيح س = 1
    إرجع 0.
}
